--- a/index.html
+++ b/index.html
@@ -70,66 +70,63 @@
                 </div>
             </section>
 
-            <div v-if="expenses.length > 0 && showDetails">
-                <div class="py-4 flex items-center gap-3 opacity-60">
-                    <div class="h-px bg-gray-700 flex-1"></div>
-                    <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest safe-render">消費詳情 Details</span>
-                    <div class="h-px bg-gray-700 flex-1"></div>
-                </div>
-                <div class="space-y-3">
-                    <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm relative">
-                        <div class="flex-1 min-w-0 mr-4">
-                            <div class="font-black text-sm text-gray-200 truncate safe-render">{{ exp.item }}</div>
-                            <div class="text-[10px] text-gray-500">
-                                <b class="text-emerald-600 uppercase safe-render">{{ exp.payer }}</b> 付 {{ exp.currency }} {{ exp.amount }}
-                            </div>
+            <div v-if="expenses.length > 0 && showDetails" class="py-4 flex items-center gap-3 opacity-60">
+                <div class="h-px bg-gray-700 flex-1"></div>
+                <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest safe-render">消費詳情 Details</span>
+                <div class="h-px bg-gray-700 flex-1"></div>
+            </div>
+
+            <div v-if="expenses.length > 0 && showDetails" class="space-y-3">
+                <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm relative">
+                    <div class="flex-1 min-w-0 mr-4">
+                        <div class="font-black text-sm text-gray-200 truncate safe-render">{{ exp.item }}</div>
+                        <div class="text-[10px] text-gray-500">
+                            <b class="text-emerald-600 uppercase safe-render">{{ exp.payer }}</b> 
+                            <span class="opacity-80">付 {{ exp.currency }} {{ exp.amount }}</span>
                         </div>
-                        <div class="text-right flex items-center gap-4">
-                            <div class="font-mono font-bold text-gray-200 safe-render">HK${{ exp.hkd.toFixed(1) }}</div>
-                            <div v-if="!isExporting" class="flex gap-3 opacity-20 text-xs">
-                                <button @click="startEdit(idx)"><i class="fas fa-edit"></i></button>
-                                <button @click="removeExpense(idx)" class="text-red-500"><i class="fas fa-trash"></i></button>
-                            </div>
+                    </div>
+                    <div class="text-right flex items-center gap-4">
+                        <div class="font-mono font-bold text-gray-200 safe-render">HK${{ exp.hkd.toFixed(1) }}</div>
+                        <div v-if="!isExporting" class="flex gap-3 opacity-20 text-xs">
+                            <button @click="startEdit(idx)"><i class="fas fa-edit"></i></button>
+                            <button @click="removeExpense(idx)" class="text-red-500"><i class="fas fa-trash"></i></button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <section v-if="!isExporting" class="card-bg p-5 rounded-3xl shadow-sm">
-            <h2 class="font-bold text-emerald-500 mb-4 text-xs uppercase tracking-widest">1. 加入朋友</h2>
-            <div class="flex gap-2 mb-4">
-                <input v-model="newUser" @keyup.enter="addUser" type="text" placeholder="名稱..." class="input-bg flex-1 p-3 rounded-2xl text-sm outline-none">
-                <button @click="addUser" class="bg-emerald-600 text-white px-6 rounded-2xl text-sm font-bold">加入</button>
-            </div>
-            <div class="flex flex-wrap gap-2">
-                <span v-for="(u, i) in users" :key="u" class="bg-emerald-500/10 text-emerald-500 px-4 py-2 rounded-xl text-xs border border-emerald-500/20 flex items-center gap-2 font-bold">
-                    {{ u }} <button @click="removeUser(i)" class="opacity-40">×</button>
-                </span>
-            </div>
-        </section>
-
-        <section v-if="!isExporting" id="input-section" class="card-bg rounded-3xl p-6 border border-white/5">
-            <h2 class="font-bold text-emerald-500 mb-4 text-xs uppercase tracking-widest">2. 記帳</h2>
+        <section v-if="!isExporting" id="input-section" class="card-bg rounded-3xl p-6 border border-white/5 mt-6">
             <div class="space-y-5">
+                <div class="flex flex-wrap gap-2 mb-4">
+                    <input v-model="newUser" @keyup.enter="addUser" type="text" placeholder="加入朋友名稱..." class="input-bg flex-1 p-3 rounded-2xl text-sm outline-none">
+                    <button @click="addUser" class="bg-emerald-600 text-white px-6 rounded-2xl text-sm font-bold">加入</button>
+                </div>
+                <div class="flex flex-wrap gap-2 mb-6">
+                    <span v-for="(u, i) in users" :key="u" class="bg-emerald-500/10 text-emerald-500 px-4 py-2 rounded-xl text-xs border border-emerald-500/20 flex items-center gap-2 font-bold">
+                        {{ u }} <button @click="removeUser(i)" class="opacity-40">×</button>
+                    </span>
+                </div>
                 <input v-model="form.item" type="text" placeholder="項目" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
                 <div class="flex gap-2">
                     <select v-model="form.currency" @change="fetchRate" class="input-bg p-4 rounded-2xl text-sm w-1/3 font-bold">
                         <option value="HKD">🇭🇰 HKD</option>
                         <option value="JPY">🇯🇵 JPY</option>
                         <option value="TWD">🇹🇼 TWD</option>
+                        <option value="CNY">🇨🇳 CNY</option>
+                        <option value="THB">🇹🇭 THB</option>
                     </select>
                     <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold outline-none">
                 </div>
                 <div class="grid grid-cols-2 gap-4">
                     <div class="space-y-2">
-                        <label class="text-[10px] font-bold text-gray-500 ml-1">誰付款？</label>
+                        <label class="text-[10px] font-bold text-gray-500">誰付款？</label>
                         <select v-model="form.payer" class="input-bg w-full p-3 rounded-2xl text-sm outline-none">
                             <option v-for="u in users" :key="u" :value="u">{{ u }}</option>
                         </select>
                     </div>
                     <div class="space-y-2">
-                        <label class="text-[10px] font-bold text-gray-500 ml-1">誰參與？</label>
+                        <label class="text-[10px] font-bold text-gray-500">誰參與？</label>
                         <div class="input-bg max-h-32 overflow-y-auto rounded-2xl p-3 text-[10px]">
                             <div v-for="u in users" :key="u" class="flex items-center gap-3 mb-2">
                                 <input type="checkbox" :value="u" v-model="form.involved" class="w-4 h-4 rounded accent-emerald-500">
@@ -138,14 +135,14 @@
                         </div>
                     </div>
                 </div>
-                <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-5 rounded-[20px] text-sm tracking-widest">
+                <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-5 rounded-[20px] shadow-xl text-sm uppercase tracking-widest active:scale-95 transition-all">
                     {{ isEditing ? '儲存修改' : '確認記帳' }}
                 </button>
             </div>
         </section>
 
         <div v-if="showTextShare" class="fixed inset-0 bg-black/80 backdrop-blur-md z-[60] flex items-center justify-center p-6" @click.self="showTextShare = false">
-            <div class="card-bg w-full max-w-sm rounded-[32px] p-6 flex flex-col gap-4 shadow-2xl border border-white/10">
+            <div class="card-bg w-full max-w-sm rounded-[32px] p-6 flex flex-col gap-4 shadow-2xl">
                 <h3 class="font-black text-emerald-500 text-sm">文字結算</h3>
                 <textarea readonly class="input-bg w-full h-64 p-4 rounded-2xl text-[13px] font-mono leading-relaxed" v-model="shareMessage"></textarea>
                 <div class="grid grid-cols-2 gap-3">
@@ -157,16 +154,13 @@
 
         <div v-if="previewImg" class="fixed inset-0 bg-black/90 backdrop-blur-md z-[70] flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
             <div class="w-full max-w-sm flex flex-col items-center">
-                <img :src="previewImg" class="max-w-full max-h-[60vh] rounded-2xl mb-8 border border-white/10">
+                <img :src="previewImg" class="max-w-full max-h-[60vh] rounded-2xl shadow-2xl border border-white/10 mb-8">
                 <div class="grid grid-cols-2 gap-4 w-full">
-                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-xs font-bold">下載圖片</button>
-                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-xs font-bold">分享圖片</button>
+                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">下載圖片</button>
+                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-xs font-bold shadow-lg active:scale-95 transition-all">分享圖片</button>
                 </div>
+                <button @click="previewImg = null" class="mt-8 text-emerald-500 text-xs font-bold underline">返回編輯</button>
             </div>
-        </div>
-
-        <div v-if="expenses.length > 0 && !isExporting" class="px-4 text-center mt-4">
-            <button @click="clearAll" class="text-red-500/30 text-[10px] font-bold uppercase py-2">清除所有紀錄</button>
         </div>
     </div>
 </div>
@@ -197,6 +191,17 @@ createApp({
             form.value.item = ""; form.value.amount = "";
         };
 
+        const startEdit = (i) => {
+            isEditing.value = true; editIndex.value = i;
+            form.value = JSON.parse(JSON.stringify(expenses.value[i]));
+            window.scrollTo({ top: document.getElementById('input-section').offsetTop - 100, behavior: 'smooth' });
+        };
+
+        const saveEdit = () => {
+            expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * currentRate.value };
+            isEditing.value = false; form.value.item = ""; form.value.amount = "";
+        };
+
         const generateImage = async () => {
             isExporting.value = true;
             setTimeout(async () => {
@@ -208,6 +213,13 @@ createApp({
                 isExporting.value = false;
             }, 300);
         };
+
+        const downloadImage = () => { const link = document.createElement('a'); link.download = `MathGod.png`; link.href = previewImg.value; link.click(); };
+        const shareImage = async () => {
+            try { const res = await fetch(previewImg.value); const blob = await res.blob(); const file = new File([blob], 'settlement.png', { type: 'image/png' }); if (navigator.share) await navigator.share({ files: [file] }); } catch(e) {}
+        };
+        const copyText = () => { navigator.clipboard.writeText(shareMessage.value); alert("內容已複製！"); };
+        const shareWhatsApp = () => { window.open(`https://api.whatsapp.com/send?text=${encodeURIComponent(shareMessage.value)}`); };
 
         const settlements = computed(() => {
             let balances = {}; users.value.forEach(u => balances[u] = 0);
@@ -234,15 +246,12 @@ createApp({
         const shareMessage = computed(() => {
             let msg = `⚡️ 【數神 MathGod】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 找數結果：\n`;
             settlements.value.forEach(s => msg += `🔹 ${s.from} ➔ ${s.to}：HK$${s.amount.toFixed(1)}\n`);
-            
             if (showDetails.value && expenses.value.length > 0) {
                 msg += `\n📝 消費詳情：\n`;
-                expenses.value.forEach(e => {
-                    msg += `▫️ ${e.item} (${e.payer})：${e.currency}${e.amount}\n`;
-                });
+                expenses.value.forEach(e => msg += `▫️ ${e.item} (${e.payer})：${e.currency}${e.amount}\n`);
             }
-            // 修正：更直白的結尾
-            msg += `\n大家可以找數啦！😁`;
+            // 修正：自定義結尾文字
+            msg += `\n大家可以睇返銀碼找數啦！😃`;
             return msg;
         });
 
@@ -254,7 +263,7 @@ createApp({
 
         return { 
             users, newUser, form, expenses, isEditing, isExporting, previewImg, showTextShare, shareMessage, showDetails,
-            addUser, addExpense, startEdit, saveEdit, clearAll, copyText, shareWhatsApp: () => window.open(`https://api.whatsapp.com/send?text=${encodeURIComponent(shareMessage.value)}`), generateImage, downloadImage: () => { const link = document.createElement('a'); link.download = `Settlement.png`; link.href = previewImg.value; link.click(); }, shareImage: async () => { const res = await fetch(previewImg.value); const blob = await res.blob(); const file = new File([blob], 'settlement.png', { type: 'image/png' }); if (navigator.share) await navigator.share({ files: [file] }); }, settlements,
+            addUser, addExpense, startEdit, saveEdit, copyText, shareWhatsApp, generateImage, downloadImage, shareImage, settlements,
             totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
             fetchRate, removeUser:(i)=>users.value.splice(i,1), removeExpense:(i)=>expenses.value.splice(i,1)
         };
