--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </h1>
             <label class="flex items-center gap-2 bg-black/20 px-3 py-1.5 rounded-full border border-white/10 cursor-pointer active:scale-95 transition-all">
                 <input type="checkbox" v-model="showDetails" class="accent-emerald-400 w-4 h-4 rounded">
-                <span class="text-[10px] font-bold uppercase tracking-wide">顯示詳情</span>
+                <span class="text-[10px] font-bold uppercase tracking-wide">列出消費詳情</span>
             </label>
         </div>
         <div class="flex gap-2 justify-end">
@@ -62,7 +62,10 @@
         <div id="capture-zone">
             <section v-if="expenses.length > 0" class="bg-emerald-950/20 border border-emerald-900/40 p-6 rounded-[32px] mb-2">
                 <div class="flex justify-between items-start mb-6">
-                    <div><h2 class="font-black text-emerald-500 text-xl tracking-tight safe-render">最終結算</h2><p class="text-[10px] text-gray-500 -mt-2">Settlement</p></div>
+                    <div>
+                        <h2 class="font-black text-emerald-500 text-xl tracking-tight safe-render">最終結算</h2>
+                        <p class="text-[10px] text-gray-500 -mt-2">Settlement</p>
+                    </div>
                     <div class="text-right">
                         <div class="text-[10px] font-bold text-gray-500 uppercase tracking-widest mb-1 safe-render">總消費 Total Spent</div>
                         <div class="font-mono font-bold text-emerald-500 text-lg">HK${{ totalSpent.toFixed(1) }}</div>
@@ -72,18 +75,43 @@
                     <div v-for="(s, i) in settlements" :key="i" class="bg-black/40 border border-white/5 flex items-center justify-between p-4 rounded-2xl">
                         <div class="flex items-center gap-2">
                             <span class="text-rose-400 font-black text-sm safe-render">{{ s.from }}</span>
-                            <i class="fas fa-arrow-right text-[10px] text-gray-700"></i><span class="text-emerald-500 font-black text-sm safe-render">{{ s.to }}</span>
+                            <i class="fas fa-arrow-right text-[10px] text-gray-700"></i>
+                            <span class="text-emerald-500 font-black text-sm safe-render">{{ s.to }}</span>
                         </div>
                         <span class="font-mono text-xl text-emerald-500 font-black italic safe-render">HK${{ s.amount.toFixed(1) }}</span>
                     </div>
                 </div>
             </section>
+
+            <div v-if="expenses.length > 0 && showDetails" class="py-4 flex items-center gap-3 opacity-60">
+                <div class="h-px bg-gray-700 flex-1"></div>
+                <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest safe-render">消費詳情 Details</span>
+                <div class="h-px bg-gray-700 flex-1"></div>
             </div>
+
+            <div v-if="expenses.length > 0 && showDetails" class="space-y-3">
+                <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm relative">
+                    <div class="flex-1 min-w-0 mr-4">
+                        <div class="font-black text-sm text-gray-200 truncate safe-render">{{ exp.item }}</div>
+                        <div class="text-[10px] text-gray-500">
+                            <b class="text-emerald-600 uppercase safe-render">{{ exp.payer }}</b> 
+                            <span class="opacity-80">付 {{ exp.currency }} {{ exp.amount }}</span>
+                        </div>
+                    </div>
+                    <div class="text-right flex items-center gap-4">
+                        <div class="font-mono font-bold text-gray-200 safe-render">HK${{ exp.hkd.toFixed(1) }}</div>
+                        <div v-if="!isExporting" class="flex gap-3 opacity-20 text-xs">
+                            <button @click="startEdit(idx)"><i class="fas fa-edit"></i></button>
+                            <button @click="removeExpense(idx)" class="text-red-500"><i class="fas fa-trash"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <section v-if="!isExporting" id="input-section" class="card-bg rounded-3xl p-6 border border-white/5 mt-6">
             <div class="space-y-5">
-                <input v-model="form.item" type="text" placeholder="項目" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
-                
+                <input v-model="form.item" type="text" placeholder="項目 (例如: 午飯)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
                 <div class="flex gap-2">
                     <select v-model="form.currency" @change="fetchRate" class="input-bg p-4 rounded-2xl text-sm w-1/3 font-bold">
                         <option value="HKD">🇭🇰 HKD</option>
@@ -98,7 +126,6 @@
                 <div v-if="form.currency !== 'HKD'" class="bg-emerald-500/5 border border-emerald-500/20 p-4 rounded-2xl">
                     <div class="flex justify-between items-center mb-1">
                         <label class="text-[10px] font-bold text-emerald-500 uppercase tracking-wider">自訂匯率 (1 {{form.currency}} = ? HKD)</label>
-                        <span class="text-[10px] text-gray-500">當前參考: {{currentRate.toFixed(4)}}</span>
                     </div>
                     <input v-model.number="currentRate" type="number" step="0.0001" class="input-bg w-full p-3 rounded-xl text-sm font-mono text-emerald-400 outline-none">
                 </div>
@@ -120,23 +147,46 @@
                         </div>
                     </div>
                 </div>
-
                 <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-5 rounded-[20px] shadow-xl text-sm uppercase tracking-widest active:scale-95 transition-all">
                     {{ isEditing ? '儲存修改' : '確認記帳' }}
                 </button>
             </div>
         </section>
+
+        <div v-if="showTextShare" class="fixed inset-0 bg-black/80 backdrop-blur-md z-[60] flex items-center justify-center p-6" @click.self="showTextShare = false">
+            <div class="card-bg w-full max-w-sm rounded-[32px] p-6 flex flex-col gap-4 shadow-2xl border border-white/10">
+                <h3 class="font-black text-emerald-500 text-sm">文字結算</h3>
+                <textarea readonly class="input-bg w-full h-64 p-4 rounded-2xl text-[13px] font-mono leading-relaxed" v-model="shareMessage"></textarea>
+                <div class="grid grid-cols-2 gap-3">
+                    <button @click="copyText" class="bg-gray-700 text-white py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">複製文字</button>
+                    <button @click="shareWhatsApp" class="whatsapp-green py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">WhatsApp 分享</button>
+                </div>
+            </div>
         </div>
+
+        <div v-if="previewImg" class="fixed inset-0 bg-black/90 backdrop-blur-md z-[70] flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
+            <div class="w-full max-w-sm flex flex-col items-center">
+                <img :src="previewImg" class="max-w-full max-h-[60vh] rounded-2xl shadow-2xl border border-white/10 mb-8">
+                <div class="grid grid-cols-2 gap-4 w-full">
+                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">下載圖片</button>
+                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-xs font-bold shadow-lg active:scale-95 transition-all">分享圖片</button>
+                </div>
+                <button @click="previewImg = null" class="mt-8 text-emerald-500 text-xs font-bold underline">返回編輯</button>
+            </div>
+        </div>
+
+        <div v-if="expenses.length > 0 && !isExporting" class="px-4 text-center">
+            <button @click="clearAll" class="text-red-500/30 text-[10px] font-bold uppercase py-2">清除所有紀錄</button>
+        </div>
+    </div>
 </div>
 
 <script>
-// JavaScript 邏輯同步更新，確保 currentRate 是可編輯的 ref
 const { createApp, ref, computed, watch, onMounted } = Vue;
 createApp({
     setup() {
         const users = ref([]); const newUser = ref(""); const expenses = ref([]);
-        const currentRate = ref(1); // 這是關鍵：現在它是可以手動修改的
-        const isEditing = ref(false); const editIndex = ref(null);
+        const currentRate = ref(1); const isEditing = ref(false); const editIndex = ref(null);
         const isExporting = ref(false); const previewImg = ref(null); const showTextShare = ref(false);
         const showDetails = ref(true);
         const form = ref({ item: "", amount: "", currency: "HKD", payer: "", involved: [] });
@@ -150,10 +200,13 @@ createApp({
             } catch (e) { currentRate.value = 1; }
         };
 
-        const addUser = () => { /* ...與前版本相同... */ };
+        const addUser = () => {
+            const n = newUser.value.trim();
+            if (n && !users.value.includes(n)) { users.value.push(n); form.value.involved.push(n); if(!form.value.payer) form.value.payer = n; newUser.value = ""; }
+        };
+
         const addExpense = () => {
             if (!form.value.item || !form.value.amount || !form.value.payer) return alert("請填寫正確資料");
-            // 使用當前的 currentRate 計算 HKD
             expenses.value.unshift({ id: Date.now(), ...form.value, hkd: form.value.amount * currentRate.value, rateUsed: currentRate.value, involved: [...form.value.involved] });
             form.value.item = ""; form.value.amount = "";
         };
@@ -162,7 +215,7 @@ createApp({
             isEditing.value = true; editIndex.value = i;
             const exp = expenses.value[i];
             form.value = JSON.parse(JSON.stringify(exp));
-            currentRate.value = exp.rateUsed || 1; // 編輯時抓回當時的匯率
+            currentRate.value = exp.rateUsed || 1;
             window.scrollTo({ top: document.getElementById('input-section').offsetTop - 100, behavior: 'smooth' });
         };
 
@@ -171,15 +224,66 @@ createApp({
             isEditing.value = false; form.value.item = ""; form.value.amount = "";
         };
 
-        // 截圖、分享、LocalStorage 等邏輯...與穩定版一致
-        const settlements = computed(() => { /* ...與前版本相同... */ });
-        const shareMessage = computed(() => { /* ...與前版本相同，包含自訂結尾... */ });
+        const settlements = computed(() => {
+            let balances = {}; users.value.forEach(u => balances[u] = 0);
+            expenses.value.forEach(exp => {
+                balances[exp.payer] += exp.hkd;
+                const split = exp.hkd / (exp.involved.length || 1);
+                exp.involved.forEach(p => { if(balances[p] !== undefined) balances[p] -= split; });
+            });
+            let d = [], c = [], res = [];
+            for (let u in balances) {
+                if (balances[u] < -0.01) d.push({n:u, a:Math.abs(balances[u])});
+                if (balances[u] > 0.01) c.push({n:u, a:balances[u]});
+            }
+            let i=0, j=0;
+            while(i<d.length && j<c.length){
+                let m = Math.min(d[i].a, c[j].a);
+                res.push({from: d[i].n, to: c[j].n, amount: m});
+                d[i].a -= m; c[j].a -= m;
+                if(d[i].a < 0.01) i++; if(c[j].a < 0.01) j++;
+            }
+            return res;
+        });
+
+        const shareMessage = computed(() => {
+            let msg = `⚡️ 【數神 MathGod】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 埋單找數：\n`;
+            settlements.value.forEach(s => msg += `🔹 ${s.from} ➔ ${s.to}：HK$${s.amount.toFixed(1)}\n`);
+            if (showDetails.value && expenses.value.length > 0) {
+                msg += `\n📝 消費詳情：\n`;
+                expenses.value.forEach(e => msg += `▫️ ${e.item} (${e.payer})：${e.currency}${e.amount}\n`);
+            }
+            msg += `\n大家可以睇返銀碼找數啦！😃`;
+            return msg;
+        });
+
+        const generateImage = async () => {
+            isExporting.value = true;
+            setTimeout(async () => {
+                const element = document.getElementById('capture-zone');
+                try {
+                    const canvas = await html2canvas(element, { backgroundColor: '#121212', scale: 2, useCORS: true });
+                    previewImg.value = canvas.toDataURL('image/png');
+                } catch (err) { alert("截圖失敗"); }
+                isExporting.value = false;
+            }, 300);
+        };
+
+        onMounted(() => {
+            const saved = localStorage.getItem('mathgod_v55_data');
+            if (saved) { const d = JSON.parse(saved); users.value = d.users || []; expenses.value = d.expenses || []; }
+        });
+        watch([users, expenses], () => { localStorage.setItem('mathgod_v55_data', JSON.stringify({ users: users.value, expenses: expenses.value })); }, {deep: true});
 
         return { 
             users, newUser, form, expenses, isEditing, isExporting, previewImg, showTextShare, shareMessage, showDetails, currentRate,
-            addUser, addExpense, startEdit, saveEdit, fetchRate, settlements,
-            totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
-            /* 其餘方法... */
+            addUser, addExpense, startEdit, saveEdit, settlements, totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
+            fetchRate, generateImage, downloadImage:()=> { const l=document.createElement('a'); l.download='MathGod.png'; l.href=previewImg.value; l.click(); },
+            shareImage: async()=> { try{const r=await fetch(previewImg.value); const b=await r.blob(); const f=new File([b],'s.png',{type:'image/png'}); if(navigator.share) await navigator.share({files:[f]});}catch(e){} },
+            copyText:()=> { navigator.clipboard.writeText(shareMessage.value); alert("已複製！"); },
+            shareWhatsApp:()=> { window.open(`https://api.whatsapp.com/send?text=${encodeURIComponent(shareMessage.value)}`); },
+            clearAll:()=> { if(confirm("清除？")) expenses.value=[]; },
+            removeUser:(i)=>users.value.splice(i,1), removeExpense:(i)=>expenses.value.splice(i,1)
         };
     }
 }).mount('#app');
